[package]
name = "rdicom-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"                                       
byteorder = "1.5.0"
clap = { version = "4.4", features = ["derive"] }      
colored = "3.0.0"
csv = "1.3.1"
dicom-object = "0.8.1"                                  
dicom-core = "0.8.1"
dicom-dictionary-std = "0.8.0"
dicom-pixeldata = { version = "0.8.1", features=['image']}
log = "0.4"
env_logger = "0.11"   
serde = {version = "1.0.219", features=['derive']}
serde_json = "1.0.140"
image = "0.25.6"
tempfile = "3.20.0"
rayon = "1.10.0"
