[workspace]
members = [
    "cli",
    "core",
    "commands/tags",
    "commands/view",
    "commands/ano"
]
exclude = [
    "target",
    "data",            # not a crate—just test assets
]
resolver = "3"

[workspace.package]
version = "0.2.0"
authors = ["Antonin Chafiol <antonin.chafiol@protonmail.com>"] 
repository = "https://github.com/antoninchafiol/pulsedcm"
edition = "2024"
license = "Apache-2.0"

