[package]
name = "pulsedcm-commands-view"
version = "0.2.0"
description = "Converting DICOM files into PNG"
edition = "2021"

[dependencies]
pulsedcm-core = { path = "../../core" }
rayon = "1.10.0"
tempfile = "3.20.0"
jp2k = {path = "jp2k"}
image = "0.25.6"

[build-dependencies]
bindgen = "0.69"
clang-sys = "1.8"
